# django_json_api_utils

./: .env  .gitignore  Jenkinsfile  LICENSE  MANIFEST.in  README.md  manage.py  mkdocs.yml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: workflow.yml
conf/: settings.py  urls.py
conf_test/: settings.py  urls.py  wsgi.py
django_utils/: README.md
django_utils/conf/: settings.py  urls.py
django_utils/env/: .env  __init__.py  tests.py
django_utils/error/: __init__.py  error_code.py  error_handler.py  middleware.py  tests.py
django_utils/req/: __init__.py  request.py  response.py  tests.py
django_utils/test/: __init__.py  testcase.py  tests.py
django_utils/tests/: test_functional.py
djapi/env/: __init__.py
djapi/error/: __init__.py  error_code.py  error_handler.py  middleware.py
djapi/req/: __init__.py  remote.py  request.py  response.py
djapi/test/: __init__.py  testcase.py
error/: __init__.py  error_code.py  error_handler.py  middleware.py
req/: request.py  tests.py
test/: testcase.py
tests/: app.py  models.py  test_functional.py  views.py
tests/unit/: test_env.py  test_error.py  test_req.py
tests_djapi/unit/: test_error.py  test_req.py  test_test.py
