[metadata]
name = django_json_api_utils
version = 0.1
description = Commonly used utils for json api servers using django
long_description = file: README.md
author = Harold Chen
author_email = harold7233@hotmail.com

[options]
include_package_data = true
install_requires =
    python-dotenv
    typed-ast
packages = find:
[options.packages.find]
exclude =
    conf
    tests